# imc-algothon

./: .env.example  .gitignore  LICENSE  Makefile  README.md  bot.py  bot_template.py  config.py  main.py  pyproject.toml
.claude/: SPEC.md
data/: __init__.py  flights.py  price_tracker.py  thames.py  weather.py
execution/: __init__.py  arbitrage.py  executor.py  inventory.py  order_scheduler.py  scratch.py  strategies.py
risk/: __init__.py  manager.py
tests/: test_helpers.py  test_strategies.py  test_theo_engine.py
theo/: __init__.py  engine.py
utils/: __init__.py  helpers.py  rate_limiter.py
