[project]
name = "imc-algothon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "python-dotenv",
    "requests",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["bot", "config", "data", "execution", "risk", "theo", "utils"]
